# MotionGesture

./: README.md  pyproject.toml
motion_gesture/: direction.py  kde_window_action.py  motion_gesture.py  nt_window_action.py  vk_code.py  window_action.py
tests/: test_motion_gesture.py
