[tool.poetry]
name = "motion_gesture"
version = "0.1.0"
description = ""
authors = ["Zeinok <zeinok@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-contrib-python = "^4.2.0"
imutils = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
