[tool.poetry]
name = "motion_gesture"
version = "0.1.0"
description = ""
authors = ["Zeinok <zeinok@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-contrib-python = "^4.2.0"
imutils = "^0.5.3"
pywin32 = "^227"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
motiongst = 'motion_gesture.motion_gesture:main'
